# ORI

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  build.sh  install.sh  tmp.md
.github/workflows/: build.yml
aur/: PKGBUILD
include/: ori_core.h
src/: main.cpp
src/core/: ori_core.cpp
